--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
      <div id="container" >
       <header class="header-bloc" >
         <picture>
-            <source media="(max-width: 768px)" srcset="assets/logo/Booki.png">
-            <img id="logo-booki" src="assets/logo/Booki@3x.png" alt="Logo site Booki" >
-            <!-- Par défaut je charge le logo correspondant à une résolution pour Desktop et 
-            je m'adapte pour les mobiles avec une plus faible résolution pour le logo-->
+            <source media="(min-width: 1920px)" srcset="assets/logo/Booki.png">
+            <img id="logo-booki" src="assets/logo/Booki.png" alt="Logo site Booki" >
+            <!--Par défaut je charge le logo correspondant à une résolution standard et je m'adapte pour les très grands écrans-->
         </picture>         
        <nav>
         <ul id="nav-ul">
@@ -67,7 +66,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                            <img src="assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
@@ -84,7 +83,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                            <img src="assets/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
@@ -101,7 +100,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                            <img src="assets/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
@@ -120,7 +119,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                            <img src="assets/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
@@ -137,7 +136,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                            <img src="assets/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
@@ -154,7 +153,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                            <img src="assets/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>     
@@ -182,7 +181,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <img src="assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
@@ -202,7 +201,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au cœur de l'eau Chambres d'hôtes">
+                            <img src="assets/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au cœur de l'eau Chambres d'hôtes">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
@@ -222,7 +221,7 @@
                             <source media="(max-width: 768px)" srcset="assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
-                            <img src="assets/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
+                            <img src="assets/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
@@ -251,7 +250,7 @@
                             <source media="(max-width: 768px)" srcset="assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
-                            <img src="assets/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port de Marseille">
+                            <img src="assets/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Le Vieux Port de Marseille">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
@@ -265,7 +264,7 @@
                                 <source media="(max-width: 768px)" srcset="assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
                                 <source media="(max-width: 992px)" srcset="assets/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
                                 <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
-                                <img src="assets/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues à Marseille">
+                                <img src="assets/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Le Fort de Pomègues à Marseille">
                                 <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                                 je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                         </picture>    
@@ -278,7 +277,7 @@
                                 <source media="(max-width: 768px)" srcset="assets/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
                                 <source media="(max-width: 992px)" srcset="assets/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
                                 <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
-                                <img src="assets/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                                <img src="assets/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
                                 <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                                 je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                         </picture>    
@@ -292,7 +291,7 @@
                             <source media="(max-width: 768px)" srcset="assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
                             <source media="(max-width: 992px)" srcset="assets/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
                             <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
-                            <img src="assets/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques">
+                            <img src="assets/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Le Parc National des Calanques">
                             <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                             je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                     </picture>    
@@ -306,7 +305,7 @@
                                 <source media="(max-width: 768px)" srcset="assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
                                 <source media="(max-width: 992px)" srcset="assets/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg">
                                 <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg">
-                                <img src="assets/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                                <img src="assets/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                                 <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                                 je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                         </picture>    
@@ -319,7 +318,7 @@
                                 <source media="(max-width: 768px)" srcset="assets/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
                                 <source media="(max-width: 992px)" srcset="assets/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
                                 <source media="(min-width: 1920px)" srcset="assets/activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
-                                <img src="assets/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
+                                <img src="assets/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Le Parc Longchamp à Marseille">
                                 <!-- Par défaut je charge l'image correspondant à une résolution pour écrans standards et 
                                 je m'adapte pour les cas mobiles/tablettes et très grands écrans en chargeant des résolutions adaptées-->
                         </picture>    
